narrative style highlights

--- a/index.html
+++ b/index.html
@@ -299,28 +299,9 @@
 
     <section class="highlights" data-aos="fade-up">
       <h2>Highlights</h2>
-      <div style="display: flex; flex-direction: column; gap: 1.5rem;">
-        <div style="background: #fff5f5; border-left: 6px solid #7c1c1c; padding: 1rem; border-radius: 8px;">
-          <strong>Top in the World</strong><br />
-          Scored highest globally in O Level Mathematics (2023), recognized by Cambridge International.
-        </div>
-        <div style="background: #fff5f5; border-left: 6px solid #7c1c1c; padding: 1rem; border-radius: 8px;">
-          <strong>Harvard Business Review Author</strong><br />
-          Published research on AI and strategic leadership as a co-author at the Harvard Business Review.
-        </div>
-        <div style="background: #fff5f5; border-left: 6px solid #7c1c1c; padding: 1rem; border-radius: 8px;">
-          <strong>Founder of Qafla</strong><br />
-          Created a digital platform for deep thinkers and writers in the Global South.
-        </div>
-        <div style="background: #fff5f5; border-left: 6px solid #7c1c1c; padding: 1rem; border-radius: 8px;">
-          <strong>NYAS Member</strong><br />
-          Selected as a member of the New York Academy of Sciences' 1000 Girls, 1000 Futures program.
-        </div>
-        <div style="background: #fff5f5; border-left: 6px solid #7c1c1c; padding: 1rem; border-radius: 8px;">
-          <strong>Research Intern at LUMS RISE</strong><br />
-          Worked on AI-focused projects with the Research Initiative for Scientific Enhancement team.
-        </div>
-      </div>
+      <p style="font-size: 1.05rem;">
+        I was named <strong>Top in the World</strong> in O Level Mathematics by Cambridge International in 2023. I’ve since co-authored a publication in the <strong>Harvard Business Review</strong> exploring how AI can enable more strategic leadership, and conducted independent research on data structures for surreal numbers under the guidance of faculty at <strong>LUMS</strong>. As a <strong>young member of the New York Academy of Sciences</strong>, I continue to grow in global STEM spaces while staying rooted in local impact — from founding <strong>Qafla</strong>, a digital space for thinkers across the Global South, to teaching girls how to code in my ancestral village in Chakwal. I also served as <strong>Head Girl</strong> in high school, and am now proud to call myself a <strong>Tartan</strong> at Carnegie Mellon University.
+      </p>
     </section>
 
     
