--- a/index.html
+++ b/index.html
@@ -291,15 +291,16 @@
       <div class="about-text">
         <div class="typing-line">Hi, I’m Amal Zahra.</div>
         <p>
-          I’m a CS undergrad at Carnegie Mellon and a girl who once topped the world in O Level Math. Since then, I’ve published in the <strong>Harvard Business Review</strong>, explored surreal number data structures with LUMS faculty, and joined the <strong>New York Academy of Sciences</strong> as one of their youngest members. But some of my proudest moments weren’t academic: teaching girls to code in my ancestral village in Chakwal, starting <strong>Qafla</strong> to give thinkers from the Global South a voice, leading my school as <strong>Head Girl</strong>.
+          I’m a CS undergrad at Carnegie Mellon and a girl who once topped the world in O Level Math. Since then, I’ve co-authored a research piece in the <strong>Harvard Business Review</strong> exploring AI and leadership, while creating data structures for surreal numbers with LUMS faculty. I founded <strong>Qafla</strong> to teach girls how to code in my ancestral village in Chakwal. Currently, I serve as one of the youngest members of the <strong>New York Academy of Sciences</strong>.
         </p>
         <p>
-          I love math. I love hard questions. I love stories and strange ideas and systems and breaking them. I want to build a future that’s smart and humane. And if I can, I want to do it all with beauty.
+          At heart, I’m a mathematician and a poet who loves to think. Here, I write my thoughts.
         </p>
         <p>Welcome to the Amalverse.</p>
       </div>
       <div class="about-photo"></div>
     </section>
+
 
     
     <section id="notes" data-aos="fade-up">
