about text formatting

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       <div class="about-text">
         <div class="typing-line">Hi, I’m Amal Zahra.</div>
         <p>
-          I’m a CS undergrad at Carnegie Mellon and a girl who once topped the world in O Level Math. Since then, I’ve co-authored a research piece in the <strong>Harvard Business Review</strong> exploring AI and leadership, while creating data structures for surreal numbers with LUMS faculty. I founded <strong>Qafla</strong> to teach girls how to code in my ancestral village in Chakwal. Currently, I serve as one of the youngest members of the <strong>New York Academy of Sciences</strong>.
+          I’m a CS undergrad at <em>Carnegie Mellon Univeristy</em> in Qatar and a girl who once topped the world in O Level Math. Since then, I’ve co-authored a research piece in the <em>Harvard Business Review</em> exploring AI and leadership, while creating data structures for surreal numbers with LUMS faculty. I founded <em>Qafla</em> to teach girls how to code in my ancestral village in Chakwal. Currently, I serve as one of the youngest members of the <em>New York Academy of Sciences</em>.
         </p>
         <p>
           At heart, I’m a mathematician and a poet who loves to think. Here, I write my thoughts.
