link colour change

--- a/index.html
+++ b/index.html
@@ -251,6 +251,15 @@
     body.dark-mode .socials a:hover svg {
       fill: #bbbbbb;
     }
+
+    .about-text a {
+      color: #7c1c1c; /* deep crimson, matches your palette */
+      text-decoration: underline; /* or 'none' if you prefer clean */
+    }
+    .about-text a:hover {
+      color: #a33b3b; /* lighter on hover */
+    }
+
   </style>
 </head>
 <body>
