--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
     }
 
   </style>
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <audio id="bg-music" autoplay loop>
