--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     }
 
   </style>
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="svgviewer-output.svg">
 </head>
 <body>
   <audio id="bg-music" autoplay loop>
