--- a/index.html
+++ b/index.html
@@ -318,28 +318,20 @@
     </section>
 
 
+    <section class="reflections" id="reflections" data-aos="fade-up">
+      <div class="section-title">Reflections</div>
+      <p>Personal explorations, lessons, experiences, and quiet revolutions of thought.</p>
+    </section>
     
-    <section id="notes" data-aos="fade-up">
-      <h2>Notes from the Amalverse</h2>
-      <div class="notes-entry">
-        <time>May 28, 2025</time>
-        <a href="#"><p>"I think most people want to be extraordinary. I just want to be real and useful. Sometimes those overlap."</p></a>
-      </div>
-      <div class="notes-entry">
-        <time>May 26, 2025</time>
-        <a href="#"><p>"Maybe the truth isn’t a place, but a process. A rhythm you learn to dance to."</p></a>
-      </div>
-      <div class="notes-entry">
-        <time>May 24, 2025</time>
-        <a href="#"><p>"I like things that are messy and honest and unfinished. Maybe that’s what I am too."</p></a>
-      </div>
+    <section class="perspectives" id="perspectives" data-aos="fade-up">
+      <div class="section-title">Perspectives</div>
+      <p>Original takes on tech, society, philosophy, and what it means to build something meaningful.</p>
     </section>
-
-    <section class="art" id="art" data-aos="fade-up">
-      <h2>My Art & Poetry</h2>
-      <p>Coming soon: Personal poems, sketches, and creative fragments from the Amalverse.</p>
+    
+    <section class="poetry" id="poetry" data-aos="fade-up">
+      <div class="section-title">Poetry</div>
+      <p>Poems I write, poems I read, and the places in between where language breathes.</p>
     </section>
-  </div>
 
   <footer>
   <div class="socials">
