links to new sections

--- a/index.html
+++ b/index.html
@@ -279,9 +279,12 @@
     <h1>Amal<span>verse</span></h1>
   </header>
   <nav>
-    <a href="#about">About</a>
-    <a href="#notes">Notes</a>
-    <a href="#art">Art</a>
+    <a href="about">About</a>
+    <ul>
+      <li><a href="reflections.html">Reflections</a></li>
+      <li><a href="perspectives.html">Perspectives</a></li>
+      <li><a href="poetry.html">Poetry</a></li>
+    </ul>
     <button id="theme-toggle" style="margin-left: auto; background: none; border: 1px solid white; color: white; padding: 0.2rem 0.5rem; border-radius: 8px; cursor: pointer;">🌙</button>
     <button id="music-toggle" style="background: none; border: 1px solid white; color: white; padding: 0.2rem 0.5rem; font-size: 0.8rem; border-radius: 6px; cursor: pointer;">🔊</button>
   </nav>
@@ -315,29 +318,6 @@
         <p>Welcome to the Amalverse.</p>
       </div>
       <div class="about-photo"></div>
-    </section>
-
-
-    
-    <section id="notes" data-aos="fade-up">
-      <h2>Notes from the Amalverse</h2>
-      <div class="notes-entry">
-        <time>May 28, 2025</time>
-        <a href="#"><p>"I think most people want to be extraordinary. I just want to be real and useful. Sometimes those overlap."</p></a>
-      </div>
-      <div class="notes-entry">
-        <time>May 26, 2025</time>
-        <a href="#"><p>"Maybe the truth isn’t a place, but a process. A rhythm you learn to dance to."</p></a>
-      </div>
-      <div class="notes-entry">
-        <time>May 24, 2025</time>
-        <a href="#"><p>"I like things that are messy and honest and unfinished. Maybe that’s what I am too."</p></a>
-      </div>
-    </section>
-
-    <section class="art" id="art" data-aos="fade-up">
-      <h2>My Art & Poetry</h2>
-      <p>Coming soon: Personal poems, sketches, and creative fragments from the Amalverse.</p>
     </section>
   </div>
 
