--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
     <a href="about">Home</a>
     <a href="reflections.html">Reflections</a>
     <a href="perspectives.html">Perspectives</a>
+    <a href="poetry">Poetry</a>
     <button id="theme-toggle" style="margin-left: auto; background: none; border: 1px solid white; color: white; padding: 0.2rem 0.5rem; border-radius: 8px; cursor: pointer;">🌙</button>
     <button id="music-toggle" style="background: none; border: 1px solid white; color: white; padding: 0.2rem 0.5rem; font-size: 0.8rem; border-radius: 6px; cursor: pointer;">🔊</button>
   </nav>
