--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     <h1>Amal<span>verse</span></h1>
   </header>
   <nav>
-    <a href="about">Home</a>
+    <a href="index.html">Home</a>
     <a href="reflections.html">Reflections</a>
     <a href="perspectives.html">Perspectives</a>
     <a href="poetry">Poetry</a>
