adding poettry sections

--- a/poetry.html
+++ b/poetry.html
@@ -286,10 +286,28 @@
     <button id="theme-toggle" style="margin-left: auto; background: none; border: 1px solid white; color: white; padding: 0.2rem 0.5rem; border-radius: 8px; cursor: pointer;">🌙</button>
     <button id="music-toggle" style="background: none; border: 1px solid white; color: white; padding: 0.2rem 0.5rem; font-size: 0.8rem; border-radius: 6px; cursor: pointer;">🔊</button>
   </nav>
-  <div class="container">
-   
-    
-  </div>
+
+  <main>
+    <section class="originals" id="originals" data-aos="fade-up">
+      <h2>Originals</h2>
+      <p class="section-description">Poems I've written — fragments of thought, form, and feeling.</p>
+      <!-- Individual poem cards will go here -->
+      <article class="poem">
+        <h3>Title of Poem</h3>
+        <p>[Excerpt or full poem text here]</p>
+      </article>
+    </section>
+
+    <section class="marginalia" id="marginalia" data-aos="fade-up">
+      <h2>Marginalia</h2>
+      <p class="section-description">Commentary on poems I’ve read — notes, insights, and intellectual meanderings.</p>
+      <!-- Commentary entries go here -->
+      <article class="commentary">
+        <h3>Poem/Poet Name</h3>
+        <p>[Your critical response or reflection goes here]</p>
+      </article>
+    </section>
+  </main>
 
   <footer>
   <div class="socials">
