--- a/poetry.html
+++ b/poetry.html
@@ -161,7 +161,7 @@
 
     body.dark-mode .poem-entry {
       background-color: #2c2c2c;
-      border-left: 3px solid #555;
+      border-left: 3px solid ##aa2a2a;
     }
     body.dark-mode .poem-title {
       color: #f6f6f6;
