--- a/poetry.html
+++ b/poetry.html
@@ -103,10 +103,10 @@
     .section-title {
       font-size: 2rem;
       font-family: 'Georgia', serif;
-      border-bottom: 2px solid #7c1f1f;
+      border-bottom: 2px solid #7c1c1c;
       padding-bottom: 0.5rem;
       margin-bottom: 1rem;
-      color: #2c2c2c;
+      color: #7c1c1c;
     }
     .section-subtitle {
       font-size: 1rem;
@@ -118,7 +118,7 @@
 
     .poem-entry {
       background-color: #fefefe;
-      border-left: 3px solid #aa2a2a;
+      border-left: 3px solid #7c1c1c;
       padding: 0.7rem;
       margin-bottom: 2rem;
       transition: transform 0.3s ease;
