--- a/poetry.html
+++ b/poetry.html
@@ -174,7 +174,39 @@
     body.dark-mode .section-subtitle {
       color: #bbb;
     }
+    .poetry-hero {
+      position: relative;
+      width: 100%;
+      height: 45vh;
+      background-image: url('path-to-your-image.jpeg'); /* update this path */
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 3rem;
+    }
     
+    .poetry-hero-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.45); /* soft black tint */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    
+    .poetry-hero-title {
+      color: #f4cccc;
+      font-size: 3rem;
+      font-family: 'Playfair Display', serif;
+      text-align: center;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
+      letter-spacing: 2px;
+    }
   </style>
   
   <link rel="icon" type="image/svg+xml" href="svgviewer-output (3).svg">
@@ -202,7 +234,13 @@
   </nav>
 
   <main>
-   
+
+    <section class="poetry-hero">
+      <div class="poetry-hero-overlay">
+        <h1 class="poetry-hero-title">Poetry</h1>
+      </div>
+    </section>
+
     <section class="poetry-section">
       <h2 class="section-title">Originals</h2>
       <p class="section-subtitle">Fragments of thought, form, and feeling — my own poems.</p>
