--- a/poetry.html
+++ b/poetry.html
@@ -178,7 +178,7 @@
       position: relative;
       width: 100%;
       height: 45vh;
-      background-image: url('WhatsApp Image 2025-07-26 at 06.46.26.jpeg'); /* update this path */
+      background-image: url('poetry header.jpeg'); /* update this path */
       background-size: cover;
       background-position: center;
       display: flex;
