--- a/poetry.html
+++ b/poetry.html
@@ -200,7 +200,7 @@
     }
     
     .poetry-hero-title {
-      color: #f4cccc;
+      color: #7c1c1c;
       font-size: 3rem;
       font-family: 'Playfair Display', serif;
       text-align: center;
