--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     <a href="index.html">Home</a>
     <a href="#reflections">Reflections</a>
     <a href="#perspectives">Perspectives</a>
-    <a href="#poetry">Poetry</a>
+    <a href="#poetry-section">Poetry</a>
     <button id="theme-toggle" style="margin-left: auto; background: none; border: 1px solid white; color: white; padding: 0.2rem 0.5rem; border-radius: 8px; cursor: pointer;">🌙</button>
     <button id="music-toggle" style="background: none; border: 1px solid white; color: white; padding: 0.2rem 0.5rem; font-size: 0.8rem; border-radius: 6px; cursor: pointer;">🔊</button>
   </nav>
